# smart_house_tokio

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
data_generator/: Cargo.toml
data_generator/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
