[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_generator = {path = "../data_generator"}
serde = { version = "1.0.152" , features = ["derive"] }
serde_json = "1.0.93"
rand = "0.8.1"
clap = "4.1.6"
tokio = {version ="1.25.0", features = ["full"]}
chrono = "0.4.23"